???? 0.9.5

    user visible changes, client:
    * Improved support for syncing from perforce.

    programmer visible changes:
    * New type of defaults file by repo type, i.e. P4.yaml, URL.yaml. Currently added P4.yaml to defaults folder.
    * New utility function: P4GetPathFromDepotPath to get teh local disk path from p4 depot path.
    * Usage of $(LOCAL_REPO_SOURCES_DIR) instead of $(LOCAL_REPO_SYNC_DIR)/$(SOURCE_PREFIX) - because p4 does not need SOURCE_PREFIX.

16/4/2014 0.9.4

    user visible changes, client:
    * Added new actions types for install items: copy_in, copy_out.
    * Added  copy_in actions for Au regi utility

    programmer visible changes:
    * new method accumulate_unique_actions to replace repeating code.


8/4/2014 0.9.3 Shai Shasag <shai@waves.com>

    user visible changes, client:
    * Streamlined logging. Removed many redundant messages added some useful others.
    * Fixed: Executable files on Mac would not get executable bit.

    user visible changes, admin:
    * New command set_exec, sets executable bit for files marked as fx in info_map.txt

    programmer visible changes:
    * SVNItem.num_subs_in_tree has new parameter: predicate this can be used to filter the number of files, defaults to True so previous behaviour remains.

6/4/2014 0.9.2  Shai Shasag <shai@waves.com>

    user visible changes, client:
    * Fix --run where path to batch has spaces in name (Windows).

3/4/2014 0.9.1  Shai Shasag <shai@waves.com>

    user visible changes, client:
    * Fixed exception when trying to read public key file.

30/3/2014 0.9.0  Shai Shasag <shai@waves.com>

    user visible changes, client:
    * interactive command eval renamed python.
    * New interactive command: resolve, will resolve variables in a string.

    user visible changes, admin:

    programmer visible changes:
    * Removed variable __CHECKOUT_FOLDER__, it is totaly replaced by $(ROOT_LINKS_FOLDER_REPO)/Base.